[gd_scene load_steps=30 format=2]

[ext_resource path="res://Sprites/HUD/Pepsi_08.png" type="Texture" id=1]
[ext_resource path="res://Sprites/HUD/Pepsi_06.png" type="Texture" id=2]
[ext_resource path="res://Sprites/HUD/Pepsi_02.png" type="Texture" id=3]
[ext_resource path="res://Sprites/HUD/Pepsiman_00.png" type="Texture" id=4]
[ext_resource path="res://Sprites/HUD/Dist_Man_03.png" type="Texture" id=5]
[ext_resource path="res://Sprites/HUD/Pepsi_05.png" type="Texture" id=6]
[ext_resource path="res://Sprites/HUD/Pepsi_09.png" type="Texture" id=7]
[ext_resource path="res://Sprites/HUD/Distance.png" type="Texture" id=8]
[ext_resource path="res://Sprites/HUD/Pepsican.png" type="Texture" id=9]
[ext_resource path="res://Sprites/HUD/Pepsi_07.png" type="Texture" id=10]
[ext_resource path="res://Sprites/HUD/Pepsi_04.png" type="Texture" id=11]
[ext_resource path="res://Sprites/HUD/Pepsi_03.png" type="Texture" id=12]
[ext_resource path="res://Sprites/HUD/Dist_Man_01.png" type="Texture" id=13]
[ext_resource path="res://Sprites/HUD/Pepsi_00.png" type="Texture" id=14]
[ext_resource path="res://Sprites/HUD/Dist_Man_00.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Pepsiman_gameplay2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/HUD/Dist_Man_02.png" type="Texture" id=17]
[ext_resource path="res://Sprites/HUD/Pepsi_01.png" type="Texture" id=18]
[ext_resource path="res://GlitchyEffect.gd" type="Script" id=19]
[ext_resource path="res://HUD.gd" type="Script" id=20]
[ext_resource path="res://Sound/0100_00049.wav" type="AudioStream" id=21]
[ext_resource path="res://Sprites/HUD/two points.png" type="Texture" id=22]
[ext_resource path="res://Sprites/HUD/Total.png" type="Texture" id=23]
[ext_resource path="res://Font/PEPSI_pl.ttf" type="DynamicFontData" id=24]

[sub_resource type="Shader" id=4]
code = "/*
	Glitch Effect Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type canvas_item;

uniform float rxamount = 0;
uniform float ryamount = 0;
uniform float bxamount = 0;
uniform float byamount = 0;

// 振動の強さ
uniform float shake_power = 0.03;
// 振動率
uniform float shake_rate : hint_range( 0.0, 1.0 ) = 0.2;
// 振動速度
uniform float shake_speed = 5.0;
// 振動ブロックサイズ
uniform float shake_block_size = 30.5;
// 色の分離率
uniform float shake_color_rate : hint_range( 0.0, 1.0 ) = 0.01;

float random( float seed )
{
	return fract( 543.2543 * sin( dot( vec2( seed, seed ), vec2( 3525.46, -54.3415 ) ) ) );
}

void fragment( )
{
	float enable_shift = float(
		random( trunc( TIME * shake_speed ) )
	<	shake_rate
	);

	vec2 fixed_uv = SCREEN_UV;
	fixed_uv.x += (
		random(
			( trunc( SCREEN_UV.y * shake_block_size ) / shake_block_size )
		+	TIME
		) - 0.5
	) * shake_power * enable_shift;

	vec4 pixel_color = textureLod( SCREEN_TEXTURE, fixed_uv, 0.0 );
	pixel_color.r = mix(
		pixel_color.r
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( rxamount * 0.001, ryamount * 0.001 ), 0.0 ).r
	,	enable_shift
	);
	pixel_color.b = mix(
		pixel_color.b
	,	textureLod( SCREEN_TEXTURE, fixed_uv + vec2( byamount * 0.001, bxamount * 0.001 ), 0.0 ).b
	,	enable_shift
	);
	
	COLOR = pixel_color;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/rxamount = 0.0
shader_param/ryamount = 0.0
shader_param/bxamount = 0.0
shader_param/byamount = 0.0
shader_param/shake_power = 0.0
shader_param/shake_rate = 1.0
shader_param/shake_speed = 5.0
shader_param/shake_block_size = 240.0
shader_param/shake_color_rate = 0.0

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 24 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 18 ), ExtResource( 3 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 20 )

[node name="GlitchyEffect" type="ColorRect" parent="."]
material = SubResource( 5 )
margin_right = 320.0
margin_bottom = 240.0
script = ExtResource( 19 )

[node name="PepsimanGameplay" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.133333 )
texture = ExtResource( 16 )
centered = false

[node name="Left" type="Position2D" parent="."]
z_index = 1

[node name="PepsiCounter" type="Label" parent="Left"]
margin_left = 40.0
margin_top = 19.0
margin_right = 80.0
margin_bottom = 36.0
custom_colors/font_color = Color( 0.972549, 0.972549, 0.972549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="Pepsican" type="Sprite" parent="Left"]
position = Vector2( 31, 26 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 9 )

[node name="HP" type="AnimatedSprite" parent="Left"]
position = Vector2( 80, 12 )
z_index = 1
frames = SubResource( 1 )
frame = 4
playing = true
centered = false

[node name="Right" type="Position2D" parent="."]
position = Vector2( 320, 0 )
z_index = 1

[node name="TwoPoints" type="Sprite" parent="Right"]
position = Vector2( -49, 31 )
z_index = 1
texture = ExtResource( 22 )
centered = false

[node name="TwoPoints2" type="Sprite" parent="Right"]
position = Vector2( -31, 31 )
z_index = 1
texture = ExtResource( 22 )
centered = false

[node name="Total" type="Sprite" parent="Right"]
position = Vector2( -108, 31 )
z_index = 1
texture = ExtResource( 23 )
centered = false

[node name="Extra Lifes" type="Sprite" parent="Right"]
position = Vector2( -42, 189 )
z_index = 1
texture = ExtResource( 4 )
centered = false

[node name="Distance" type="Sprite" parent="Right"]
position = Vector2( -61, 20 )
z_index = 1
texture = ExtResource( 8 )

[node name="Dist_Man" type="AnimatedSprite" parent="Right/Distance"]
position = Vector2( 42, 3 )
z_index = 1
frames = SubResource( 2 )
frame = 3
playing = true
offset = Vector2( 0, -5.5 )

[node name="Pepsican" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
